--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 18:02+0200\n"
+"PO-Revision-Date: 2010-06-16 18:04+0200\n"
 "Last-Translator:  <cihar@nvyu.net>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -1840,7 +1840,9 @@ msgstr "테이블 작업"
 msgid ""
 "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
 "extension. Please check your PHP configuration."
-msgstr " %s 확장모듈을 불러올 수 없습니다.<br />PHP 환경설정을 검사하십시오."
+msgstr ""
+"[a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] 확장모듈을 불러올 수 없습니다. PHP "
+"설정을 확인해주세요."
 
 #: libraries/db_events.inc.php:20 libraries/db_events.inc.php:22
 #: libraries/export/sql.php:415
