--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 18:04+0200\n"
+"PO-Revision-Date: 2010-06-16 18:06+0200\n"
 "Last-Translator:  <cihar@nvyu.net>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -216,7 +216,7 @@ msgstr "데이터베이스명이 없습니다!"
 #: db_operations.php:236
 #, php-format
 msgid "Database %s has been renamed to %s"
-msgstr "데이터베이스 %s의 이름을(를) %s(으)로 변경하였습니다."
+msgstr "데이터베이스 %s 의 이름을 %s 로 변경하였습니다."
 
 #: db_operations.php:240
 #, php-format
