--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 18:09+0200\n"
+"PO-Revision-Date: 2010-06-16 18:10+0200\n"
 "Last-Translator:  <cihar@nvyu.net>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -232,7 +232,7 @@ msgstr "커맨드"
 
 #: db_operations.php:429 tbl_change.php:1143
 msgid "and then"
-msgstr ""
+msgstr "이어서"
 
 #: db_operations.php:455
 #, fuzzy
