Translation update done using Pootle.

--- a/po/ko.po
+++ b/po/ko.po
@@ -291,9 +291,8 @@ msgid "Enabled"
 msgstr "유효"
 
 #: db_operations.php:552
-#, fuzzy
 msgid "Disable"
-msgstr "사용불가"
+msgstr "무효"
 
 #: db_operations.php:562
 msgid "Damaged"
