Translation update done using Pootle.

--- a/po/ko.po
+++ b/po/ko.po
@@ -310,9 +310,8 @@ msgid "Disabled"
 msgstr "무효화됨"
 
 #: db_operations.php:578
-#, fuzzy
 msgid "Enable"
-msgstr "사용가능"
+msgstr "유효화됨"
 
 #: db_operations.php:602 libraries/Index.class.php:448
 #: libraries/db_structure.lib.php:62 libraries/mysql_charsets.lib.php:107
