--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 18:12+0200\n"
+"PO-Revision-Date: 2010-06-16 18:13+0200\n"
 "Last-Translator:  <cihar@nvyu.net>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -328,9 +328,7 @@ msgstr "생성"
 msgid ""
 "The additional features for working with linked tables have been "
 "deactivated. To find out why click %shere%s."
-msgstr ""
-"linked Tables에서 작동하는 부가기능이 사용되지 않습니다. 이유를 알려면 %s여기"
-"를 클릭%s하십시오."
+msgstr "링크 테이블을 처리하는 부가 기능이 비활성화되어 있습니다. 원인을 확인하려면 %s여기를 클릭%s하십시오."
 
 #: db_operations.php:648
 msgid "Edit PDF Pages"
