--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:16+0200\n"
+"PO-Revision-Date: 2010-06-17 00:17+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5300,6 +5300,8 @@ msgid ""
 "The number of sequential read-aheads InnoDB initiated. This happens when "
 "InnoDB does a sequential full table scan."
 msgstr ""
+"Število začetih zaporednih vnaprejšnjih branj InnoDB. To se zgodi, ko InnoDB "
+"izvaja zaporedno pregledovanje celotne tabele."
 
 #: server_status.php:70
 msgid "The number of logical read requests InnoDB has done."
