--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:17+0200\n"
+"PO-Revision-Date: 2010-06-17 00:18+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5305,7 +5305,7 @@ msgstr ""
 
 #: server_status.php:70
 msgid "The number of logical read requests InnoDB has done."
-msgstr ""
+msgstr "Število logičnih bralnih zahtev, ki jih je izvedel InnoDB."
 
 #: server_status.php:71
 msgid ""
