Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:19+0200\n"
+"PO-Revision-Date: 2010-06-17 00:22+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5323,6 +5323,11 @@ msgid ""
 "counter counts instances of these waits. If the buffer pool size was set "
 "properly, this value should be small."
 msgstr ""
+"Po navadi pisanje v zalogo medpomnilnika InnoDB poteka v ozadju. Če pa je "
+"potrebno brati ali ustvariti stran in na voljo ni nobene čiste strani, je "
+"potrebno počakati, da se strani najprej izplaknejo. Ta števec šteje primere "
+"teh čakanj. Če je bila velikost zaloge medpomnilnika primerno nastavljena, "
+"bi morala biti ta vrednost majhna."
 
 #: server_status.php:73
 msgid "The number writes done to the InnoDB buffer pool."
