Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:27+0200\n"
+"PO-Revision-Date: 2010-06-17 00:31+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5485,6 +5485,9 @@ msgid ""
 "that indicates the maximum number of blocks that have ever been in use at "
 "one time."
 msgstr ""
+"Število uporabljenih blokov v predpomnilniku ključev. To je najvišja "
+"dosežena vrednost, ki kaže največje število blokov, ki so bili kadar koli "
+"naenkrat v uporabi."
 
 #: server_status.php:107
 msgid "The number of requests to read a key block from the cache."
