--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:31+0200\n"
+"PO-Revision-Date: 2010-06-17 00:32+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5506,7 +5506,7 @@ msgstr ""
 
 #: server_status.php:110
 msgid "The number of physical writes of a key block to disk."
-msgstr ""
+msgstr "Število fizičnih pisanj bloka ključev na disk."
 
 #: server_status.php:111
 msgid ""
