Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:32+0200\n"
+"PO-Revision-Date: 2010-06-17 00:34+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5499,6 +5499,9 @@ msgid ""
 "then your key_buffer_size value is probably too small. The cache miss rate "
 "can be calculated as Key_reads/Key_read_requests."
 msgstr ""
+"Število fizičnih branj bloka ključev z diska. Če je Key_reads velik, potem "
+"je vaša vrednost key_buffer_size najverjetneje premajhna. Razmerje "
+"pogrešitev predpomnilnika se lahko izračuna kot Key_reads/Key_read_requests."
 
 #: server_status.php:109
 msgid "The number of requests to write a key block to the cache."
