Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:34+0200\n"
+"PO-Revision-Date: 2010-06-17 00:37+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5517,6 +5517,10 @@ msgid ""
 "optimizer. Useful for comparing the cost of different query plans for the "
 "same query. The default value of 0 means that no query has been compiled yet."
 msgstr ""
+"Skupni izdatek zadnje prevedene poizvedbe, kot ga je izračunal optimizator "
+"poizvedb. Uporabno za primerjanje izdatkov različnih načrtov poizvedb za "
+"enake poizvedbe. Privzeta vrednost 0 pomeni, da še ni bila prevedena nobena "
+"poizvedba."
 
 #: server_status.php:112
 msgid "The number of rows waiting to be written in INSERT DELAYED queues."
