--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:37+0200\n"
+"PO-Revision-Date: 2010-06-17 00:39+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5598,7 +5598,7 @@ msgstr "Ponastavi"
 
 #: server_status.php:126
 msgid "The status of failsafe replication (not yet implemented)."
-msgstr ""
+msgstr "Stanje podvajanja odpovedne varnosti (ni še vključeno)."
 
 #: server_status.php:127
 msgid ""
