--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:41+0200\n"
+"PO-Revision-Date: 2010-06-17 00:43+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5610,7 +5610,7 @@ msgstr ""
 
 #: server_status.php:128
 msgid "The number of joins that used a range search on a reference table."
-msgstr ""
+msgstr "Število stikov, ki so uporabili iskanje območja na referenčni tabeli."
 
 #: server_status.php:129
 msgid ""
