--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:49+0200\n"
+"PO-Revision-Date: 2010-06-17 00:50+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5647,7 +5647,7 @@ msgstr ""
 
 #: server_status.php:134
 msgid "This is ON if this server is a slave that is connected to a master."
-msgstr ""
+msgstr "To je ON, če je strežnik podrejenec, povezan z glavnim strežnikom."
 
 #: server_status.php:135
 msgid ""
