--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:50+0200\n"
+"PO-Revision-Date: 2010-06-17 00:53+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5668,6 +5668,9 @@ msgid ""
 "is large, you should consider increasing the value of the sort_buffer_size "
 "system variable."
 msgstr ""
+"Število prehodov spajanja, ki jih je moral opraviti algoritem razvrščanja. "
+"Če je ta vrednost velika, razmislite o povečanju sistemske spremenljivke "
+"sort_buffer_size."
 
 #: server_status.php:138
 msgid "The number of sorts that were done with ranges."
