Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:53+0200\n"
+"PO-Revision-Date: 2010-06-17 00:56+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5695,6 +5695,10 @@ msgid ""
 "should first optimize your queries, and then either split your table or "
 "tables or use replication."
 msgstr ""
+"Koliko krat zaklepa tabele ni bilo mogoče pridobiti takoj in je bilo "
+"potrebno počakati. Če je to visoko in imate težave z zmogljivostjo, najprej "
+"optimizirajte vaše poizvedbe, nato pa ali razdelite vašo tabelo oz. tabele "
+"ali uporabite podvojevanje."
 
 #: server_status.php:143
 msgid ""
