Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:56+0200\n"
+"PO-Revision-Date: 2010-06-17 00:58+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5706,6 +5706,9 @@ msgid ""
 "calculated as Threads_created/Connections. If this value is red you should "
 "raise your thread_cache_size."
 msgstr ""
+"Število niti v predpomnilniku niti. Delež zadetkov predpomnilnika se lahko "
+"izračuna kot Threads_created/Connections. Če je ta vrednost rdeča, povečajte "
+"vaš thread_cache_size."
 
 #: server_status.php:144
 msgid "The number of currently open connections."
