--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-17 00:58+0200\n"
+"PO-Revision-Date: 2010-06-17 01:10+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5721,6 +5721,9 @@ msgid ""
 "doesn't give a notable performance improvement if you have a good thread "
 "implementation.)"
 msgstr ""
+"Število niti ustvarjenih za ravnanje s povezavami. Če je Threads_created "
+"velik, boste morda želeli povečati vrednost thread_cache_size. (Po navadi to "
+"ne izboljša zmogljivosti v veliki meri, če imate dobro izvedbo niti.)"
 
 #: server_status.php:146
 msgid "The number of threads that are not sleeping."
