Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-15 13:31+0200\n"
+"PO-Revision-Date: 2010-06-17 21:32+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1510,8 +1510,8 @@ msgid ""
 "the administrator of the MySQL server."
 msgstr ""
 "phpMyAdmin MySQL sunucusuna bağlanmayı denedi ama sunucu bağlantıyı "
-"reddetti. config.inc içindeki anamakine (host) adresini, kullanıcı adını ve "
-"parolayı kontrol edin ve MySQL sunucusunun yöneticisi tarafından verilen "
+"reddetti. Yapılandırmanızdaki anamakine (host) adresini, kullanıcı adını ve "
+"parolayı kontrol edin ve MySQL sunucusu yöneticisi tarafından verilen "
 "bilgiyle uyuştuğundan emin olun."
 
 #: libraries/auth/cookie.auth.lib.php:244
