--- a/README
+++ b/README
@@ -5,7 +5,7 @@ phpMyAdmin - Readme
 
   A set of PHP-scripts to manage MySQL over the web.
 
-  Version 3.3.4-rc1
+  Version 3.3.5-dev
   -----------------
   http://www.phpmyadmin.net/
 
