--- a/ChangeLog
+++ b/ChangeLog
@@ -85,6 +85,8 @@ $Id$
 - patch #2999595, rfe #2998130 [interface] Cleanup navigation frame.
 - [core] Update library PHPExcel to version 1.7.3c
 
+3.3.5.0 (not yet released)
+
 3.3.4.0 (not yet released)
 - bug #2996161 [import] properly escape import value
 - bug #2998889 [import] Import button does not work in Catalan
