--- a/.gsoc/todo.txt
+++ b/.gsoc/todo.txt
@@ -1,1 +1,6 @@
+cache'ing of user preferences to avoid round trips to server on each page refresh
+
+backlog:
+- Import and Export options
+
 restore cache'ing in phpmyadmin.css.php
