--- a/po/tr.po
+++ b/po/tr.po
@@ -1409,7 +1409,7 @@ msgstr[0] "%1$d satır silindi."
 #, php-format
 msgid "%1$d row inserted."
 msgid_plural "%1$d rows inserted."
-msgstr[0] "--review %1$d satır eklendi."
+msgstr[0] "%1$d satır eklendi."
 
 #: libraries/StorageEngine.class.php:198
 msgid ""
