--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-21 19:41+0200\n"
+"PO-Revision-Date: 2010-06-21 19:56+0200\n"
 "Last-Translator: Burak <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1604,7 +1604,7 @@ msgstr "Ses çal"
 
 #: libraries/blobstreaming.lib.php:698
 msgid "View video"
-msgstr "Videoyu göster"
+msgstr "Görüntüyü göster"
 
 #: libraries/blobstreaming.lib.php:702
 msgid "Download file"
