--- a/po/tr.po
+++ b/po/tr.po
@@ -3,9 +3,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-21 19:58+0200\n"
-"Last-Translator: Burak <hitowerdigit@hotmail.com>\n"
+"POT-Creation-Date: 2010-06-22 12:29+0530\n"
+"PO-Revision-Date: 2010-06-17 21:32+0200\n"
+"Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -96,7 +96,7 @@ msgstr "Veritabanı %1$s oluşturuldu."
 
 #: db_datadict.php:49 db_operations.php:387
 msgid "Database comment: "
-msgstr "Veritabanı yorumu:"
+msgstr "Veritabanı yorumu: "
 
 #: db_datadict.php:165 libraries/tbl_properties.inc.php:724
 #: pdf_schema.php:1236 tbl_operations.php:347 tbl_printview.php:130
@@ -1631,7 +1631,7 @@ msgstr "%s dosyası herhangi bir anahtar kimliği içermiyor"
 #: libraries/auth/swekey/swekey.auth.lib.php:157
 #: libraries/auth/swekey/swekey.auth.lib.php:180
 msgid "Hardware authentication failed"
-msgstr "Donanım kimlik doğrulama başarısız"
+msgstr "Donanım kimlik denetimi başarısız"
 
 #: libraries/auth/swekey/swekey.auth.lib.php:166
 msgid "No valid authentication key plugged"
@@ -1639,7 +1639,7 @@ msgstr "Geçerli kimlik denetimi anahtarı takılı değil"
 
 #: libraries/auth/swekey/swekey.auth.lib.php:202
 msgid "Authenticating..."
-msgstr "Kimlik doğrulanıyor..."
+msgstr "Kimlik denetleniyor..."
 
 #: libraries/blobstreaming.lib.php:689
 msgid "View image"
@@ -1651,7 +1651,7 @@ msgstr "Ses çal"
 
 #: libraries/blobstreaming.lib.php:698
 msgid "View video"
-msgstr "Görüntüyü göster"
+msgstr "Videoyu göster"
 
 #: libraries/blobstreaming.lib.php:702
 msgid "Download file"
