--- a/po/fr.po
+++ b/po/fr.po
@@ -1697,7 +1697,7 @@ msgstr "Documentation"
 #: libraries/common.lib.php:595 libraries/header_printview.inc.php:61
 #: server_processlist.php:60 server_status.php:358
 msgid "SQL query"
-msgstr "requête SQL"
+msgstr "Requête SQL"
 
 #: libraries/common.lib.php:634
 msgid "MySQL said: "
