Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-07-01 19:46+0200\n"
+"PO-Revision-Date: 2010-07-01 19:47+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -1965,7 +1965,7 @@ msgstr "Hachage du mot de passe"
 
 #: libraries/display_change_password.lib.php:66
 msgid "MySQL 4.0 compatible"
-msgstr "compatible MySQL 4.0"
+msgstr "Compatible MySQL 4.0"
 
 #: libraries/display_change_password.lib.php:72
 #: libraries/replication_gui.lib.php:360 server_privileges.php:822
