--- a/po/fr.po
+++ b/po/fr.po
@@ -3260,7 +3260,7 @@ msgstr "annuaire téléphonique"
 
 #: libraries/mysql_charsets.lib.php:253
 msgid "Hungarian"
-msgstr "hongrois"
+msgstr "Hongrois"
 
 #: libraries/mysql_charsets.lib.php:256
 msgid "Icelandic"
