--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-07-01 19:48+0200\n"
+"PO-Revision-Date: 2010-07-01 19:49+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -3272,7 +3272,7 @@ msgstr "Japonais"
 
 #: libraries/mysql_charsets.lib.php:262
 msgid "Latvian"
-msgstr "letton"
+msgstr "Letton"
 
 #: libraries/mysql_charsets.lib.php:265
 msgid "Lithuanian"
